--- a/jupyter-r-nbk/Chart.yaml
+++ b/jupyter-r-nbk/Chart.yaml
@@ -1,5 +1,18 @@
 apiVersion: v1
 appVersion: "1.0"
-description: A Helm chart for Kubernetes
+description: The Jupyter Notebook is an open-source web application that allows you to create and share documents
+  that contain live code, equations, visualizations and narrative text. Uses include data cleaning and
+  transformation, numerical simulation, statistical modeling, data visualization,
+  machine learning, and much more.
 name: jupyter-r-nbk
-version: 1.0.0
+version: 1.1.0
+
+keywords:
+  - jupyter
+    r
+home: http://jupyter.org/
+maintainers:
+  - name: jupyter
+    url: http://jupyter.org/
+    email: truc@jupyter.org
+icon: http://jupyter.org/assets/nav_logo.svg
