--- a/jupyter-haskell-nbk/templates/task-pv-claim.yaml
+++ b/jupyter-haskell-nbk/templates/task-pv-claim.yaml
@@ -3,9 +3,8 @@ apiVersion: v1
 metadata:
   name: task-pv-claim-{{ template "jupyter-haskell-nbk.fullname" . }}
 spec:
-  storageClassName: manual
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 3Gi
+      storage: {{ .Values.storageSize }}
