--- a/jupyter-haskell-nbk/values.yaml
+++ b/jupyter-haskell-nbk/values.yaml
@@ -48,4 +48,4 @@ affinity: {}
 
 
 
-# helm install --dry-run --debug --set resources.limits.cpu=0.6 ./jupyter-haskell-nbk
+# helm install --dry-run --debug ./jupyter-haskell-nbk
