--- a/zeppelin/Chart.yaml
+++ b/zeppelin/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 appVersion: "1.0"
 description: Web-based notebook that enables data-driven,
   interactive data analytics and collaborative documents with SQL, Scala and more.
-name: Zeppelin
+name: zeppelin
 version: 0.1.0
 keywords:
   - zeppelin
