--- a/r-studio/values.yaml
+++ b/r-studio/values.yaml
@@ -5,38 +5,34 @@
 replicaCount: 1
 
 image:
-  repository: nginx
-  tag: stable
+  repository: saagie/rstudio
+  tag: sp1.15.0-mesos1.3.1-spark2.1.0
   pullPolicy: IfNotPresent
 
 service:
   type: ClusterIP
-  port: 80
+  port: 8787
 
 ingress:
   enabled: false
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
-  path: /
-  hosts:
-    - chart-example.local
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
 
-resources: {}
+## Persist data to a persistent volume
+persistence:
+  accessMode: ReadWriteOnce
+
+storageSize: 2Gi
+
+resources:
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
   # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #  cpu: 100m
-  #  memory: 128Mi
-  # requests:
-  #  cpu: 100m
-  #  memory: 128Mi
+  limits:
+    cpu: 2.0
+    memory: 6Gi
+  requests:
+    cpu: 200m
+    memory: 512Mi
 
 nodeSelector: {}
 
