--- a/jupyter-python-nbk/templates/task-pv-claim.yaml
+++ b/jupyter-python-nbk/templates/task-pv-claim.yaml
@@ -1,10 +1,22 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: task-pv-claim-{{ template "jupyter-python-nbk.fullname" . }}
+  name: {{ template "jupyter-python-nbk.fullname" . }}
+  labels:
+    app: {{ template "jupyter-python-nbk.fullname" . }}
+    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+    release: "{{ .Release.Name }}"
+    heritage: "{{ .Release.Service }}"
 spec:
   accessModes:
-    - ReadWriteOnce
+    - {{ .Values.persistence.accessMode }}
   resources:
     requests:
-      storage: {{ .Values.storageSize }}
+      storage: {{ .Values.persistence.size }}
+{{- if .Values.persistence.storageClass }}
+{{- if (eq "-" .Values.persistence.storageClass) }}
+  storageClassName: ""
+{{- else }}
+  storageClassName: "{{ .Values.persistence.storageClass }}"
+{{- end }}
+{{- end }}
