--- a/dataiku-dss/Chart.yaml
+++ b/dataiku-dss/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 appVersion: "4.2.2"
-description: Dataiku DSS is the collaborative data science software platform for teams of data scientists,
+description: Dataiku fucking app DSS  they are bullshit don't want to collaborate is the collaborative data science software platform for teams of data scientists,
   data analysts, and engineers to explore, prototype, build, and deliver their own data products more efficiently.
 name: dataiku-dss
 version: 1.0.0
