--- a/r-studio/Chart.yaml
+++ b/r-studio/Chart.yaml
@@ -1,12 +1,10 @@
 apiVersion: v1
 appVersion: "1.0"
-description: RStudio is an integrated development environment (IDE) for R. It includes a console, syntax-highlighting
-  editor that supports direct code execution, as well as tools for plotting, history, debugging and workspace management.
-name: r-studio
+description: i love it my dear 
 version: 0.1.0
 keywords:
   - R
-home: https://www.rstudio.com/
+home: https://www.cavatroploin.com/
 maintainers:
   - name: R Studio
     mail: info@rstudio.com
