feat: allow adding labels to apps deployments

--- a/dataiku-dss/templates/deployment.yaml
+++ b/dataiku-dss/templates/deployment.yaml
@@ -11,6 +11,7 @@ spec:
     metadata:
       labels:
         app: {{ template "dataiku-dss.fullname" . }}
+{{ toYaml .Values.labels | indent 8 }}
     spec:
       initContainers:
         - name: volume-mount-hack
