--- a/jupyter-spark-nbk/templates/deployment.yaml
+++ b/jupyter-spark-nbk/templates/deployment.yaml
@@ -18,6 +18,7 @@ spec:
       labels:
         app: {{ template "jupyter-spark-nbk.name" . }}
         release: {{ .Release.Name }}
+{{ toYaml .Values.labels | indent 8 }}
     spec:
       containers:
         - name: {{ .Chart.Name }}
