--- a/r-studio/templates/deployment.yaml
+++ b/r-studio/templates/deployment.yaml
@@ -16,7 +16,9 @@ spec:
     metadata:
       labels:
         app: {{ template "r-studio.fullname" . }}
-{{ toYaml .Values.labels | indent 8 }}
+{{- with .Values.labels }}
+{{ toYaml . | indent 8 }}
+{{- end }}
     spec:
       containers:
         - name: {{ .Chart.Name }}
