--- a/zeppelin/templates/deployment.yaml
+++ b/zeppelin/templates/deployment.yaml
@@ -18,7 +18,9 @@ spec:
       labels:
         app: {{ template "Zeppelin.name" . }}
         release: {{ .Release.Name }}
-{{ toYaml .Values.labels | indent 8 }}
+{{- with .Values.labels }}
+{{ toYaml . | indent 8 }}
+{{- end }}
     spec:
       containers:
         - name: {{ .Chart.Name }}
